--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,12 +100,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation "androidx.work:work-runtime-ktx:2.4.0"
 
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "androidx.room:room-runtime:2.3.0-alpha02"
+    kapt "androidx.room:room-compiler:2.3.0-alpha02"
+    implementation "androidx.room:room-ktx:2.3.0-alpha02"
 
-    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
-    testImplementation "androidx.paging:paging-common-ktx:2.1.2"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha03"
+    testImplementation "androidx.paging:paging-common-ktx:3.0.0-alpha03"
 
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc01'
 
@@ -115,7 +115,7 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.7.2'
