--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
+    implementation 'androidx.palette:palette:1.0.0'
+
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.7.2'
     implementation "com.squareup.moshi:moshi:1.9.2"
