--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "ru.luckycactus.steamroulette"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 12
-        versionName "1.3.1"
+        versionCode 13
+        versionName "1.3.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -119,6 +119,10 @@ dependencies {
 
     implementation 'androidx.palette:palette:1.0.0'
 
+    implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
+
+    implementation 'com.google.android.play:core:1.8.0'
+    implementation 'com.google.android.play:core-ktx:1.8.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.7.2'
