--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         maven {
             url 'https://maven.fabric.io/public'
         }
+//        maven {
+//            url "https://plugins.gradle.org/m2/"
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -15,8 +18,15 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha'
+//        classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.4.0"
     }
 }
+
+//apply plugin: "scabbard.gradle"
+//
+//scabbard {
+//    enabled true
+//}
 
 allprojects {
     repositories {
