--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,9 +107,9 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha07"
     testImplementation "androidx.paging:paging-common-ktx:3.0.0-alpha07"
 
-    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc03'
 
-    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.core:core-ktx:1.3.2"
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
 
@@ -130,6 +130,7 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
     kaptTest "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    //implementation 'com.squareup.moshi:moshi-adapters:1.9.2'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
