--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
 //        maven {
-//            url "https://plugins.gradle.org/m2/"
+//            url 'https://maven.fabric.io/public'
 //        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
+        //classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha'
-//        classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.4.0"
     }
 }
-
-//apply plugin: "scabbard.gradle"
-//
-//scabbard {
-//    enabled true
-//}
 
 allprojects {
     repositories {
