--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-//        maven {
-//            url 'https://maven.fabric.io/public'
-//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.3'
-        //classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha'
     }
 }
