--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,8 +140,8 @@ dependencies {
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.6.0'
 
     implementation "com.google.dagger:hilt-android:2.28.3-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
