--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,8 @@ dependencies {
 
     implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
