--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,14 @@ android {
             includeAndroidResources = true
         }
     }
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTest/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTest/java"
+        }
+    }
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -160,12 +168,16 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 
     testImplementation 'junit:junit:4.13.1'
+    testImplementation "androidx.test:core:1.3.0"
+    androidTestImplementation "androidx.test:core:1.3.0"
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation "org.robolectric:robolectric:4.3.1"
-    testImplementation 'androidx.test.ext:junit:1.1.2'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
+    testImplementation "org.robolectric:robolectric:4.4"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation "io.mockk:mockk:1.10.0"
+    androidTestImplementation "io.mockk:mockk:1.10.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
