--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
@@ -178,6 +178,8 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation "io.mockk:mockk:1.10.0"
     androidTestImplementation "io.mockk:mockk:1.10.0"
+    testImplementation("org.assertj:assertj-core:3.18.1")
+    androidTestImplementation("org.assertj:assertj-core:3.18.1")
 }
 
 apply plugin: 'com.google.gms.google-services'
