--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,12 +110,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation "androidx.work:work-runtime-ktx:2.4.0"
 
-    implementation "androidx.room:room-runtime:2.3.0-alpha03"
-    kapt "androidx.room:room-compiler:2.3.0-alpha03"
-    implementation "androidx.room:room-ktx:2.3.0-alpha03"
+    implementation "androidx.room:room-runtime:2.3.0-alpha04"
+    kapt "androidx.room:room-compiler:2.3.0-alpha04"
+    implementation "androidx.room:room-ktx:2.3.0-alpha04"
 
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha09"
-    testImplementation "androidx.paging:paging-common-ktx:3.0.0-alpha09"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha12"
+    testImplementation "androidx.paging:paging-common-ktx:3.0.0-alpha12"
 
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc03'
 
@@ -125,7 +125,7 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.google.android.material:material:1.3.0-rc01'
 
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
@@ -146,15 +146,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
 
-    implementation "androidx.browser:browser:1.2.0"
+    implementation "androidx.browser:browser:1.3.0"
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
     implementation 'com.google.firebase:firebase-crashlytics-ktx:17.3.0'
-    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.1'
 
-    implementation "com.google.dagger:hilt-android:2.30.1-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
+    implementation "com.google.dagger:hilt-android:2.31.2-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     implementation 'androidx.hilt:hilt-work:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
@@ -178,8 +178,8 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation "io.mockk:mockk:1.10.0"
     androidTestImplementation "io.mockk:mockk:1.10.0"
-    testImplementation("org.assertj:assertj-core:3.18.1")
-    androidTestImplementation("org.assertj:assertj-core:3.18.1")
+    testImplementation "org.assertj:assertj-core:3.18.1"
+    androidTestImplementation "org.assertj:assertj-core:3.18.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
