--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         applicationId "ru.luckycactus.steamroulette"
         minSdkVersion 21
@@ -101,31 +101,32 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
-    implementation "androidx.work:work-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
-    implementation "androidx.room:room-runtime:2.3.0-alpha04"
-    kapt "androidx.room:room-compiler:2.3.0-alpha04"
-    implementation "androidx.room:room-ktx:2.3.0-alpha04"
+    implementation "androidx.room:room-runtime:2.4.1"
+    kapt "androidx.room:room-compiler:2.4.1"
+    implementation "androidx.room:room-ktx:2.4.1"
+    implementation "androidx.room:room-paging:2.4.1"
 
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha12"
-    testImplementation "androidx.paging:paging-common-ktx:3.0.0-alpha12"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
+    testImplementation "androidx.paging:paging-common-ktx:3.1.0"
 
-    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc03'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
 
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    implementation 'com.google.android.material:material:1.3.0-rc01'
+    implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
@@ -134,24 +135,24 @@ dependencies {
     implementation 'com.google.android.play:core-ktx:1.8.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    api 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    api 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation "com.squareup.moshi:moshi:1.13.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
     kaptTest "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     //implementation 'com.squareup.moshi:moshi-adapters:1.13.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
 
-    implementation "androidx.browser:browser:1.3.0"
+    implementation "androidx.browser:browser:1.4.0"
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.3.0'
-    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.7'
+    implementation 'com.google.firebase:firebase-analytics-ktx:20.0.2'
 
     implementation "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-android-compiler:2.40.5"
@@ -160,10 +161,10 @@ dependencies {
 
     implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    debugImplementation 'com.facebook.stetho:stetho:1.5.1'
-    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    debugImplementation 'com.facebook.stetho:stetho:1.6.0'
+    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 
     testImplementation 'junit:junit:4.13.1'
