--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.4.0'
 
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
+
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
     implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
