--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,14 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose true
     }
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.0-rc03'
     }
     signingConfigs {
         release {
@@ -100,6 +104,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.compose.material:material:1.0.5'
+    implementation 'androidx.compose.animation:animation:1.0.5'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.5'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation 'com.google.android.material:compose-theme-adapter:1.1.3'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
+
+    implementation "com.google.accompanist:accompanist-insets:0.22.1-rc"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
 
@@ -170,6 +184,7 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 
     testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.5'
     testImplementation "androidx.test:core:1.3.0"
     androidTestImplementation "androidx.test:core:1.3.0"
     testImplementation 'androidx.test.ext:junit:1.1.2'
