--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,8 @@ dependencies {
     implementation 'com.google.android.material:compose-theme-adapter:1.1.3'
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
 
+    implementation 'androidx.compose.material:material-icons-extended:1.1.0'
+
     implementation "com.google.accompanist:accompanist-insets:0.22.1-rc"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -158,10 +160,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     //implementation 'com.squareup.moshi:moshi-adapters:1.13.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
+
+    implementation("io.coil-kt:coil:1.4.0")
+    implementation("io.coil-kt:coil-compose:1.4.0")
 
     implementation "androidx.browser:browser:1.4.0"
 
