--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,7 +112,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
     implementation 'com.google.android.material:compose-theme-adapter:1.1.3'
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
-
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation 'androidx.compose.material:material-icons-extended:1.1.0'
 
     implementation "com.google.accompanist:accompanist-insets:0.22.1-rc"
