--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,13 +109,15 @@ dependencies {
     implementation 'androidx.compose.material:material:1.0.5'
     implementation 'androidx.compose.animation:animation:1.0.5'
     implementation 'androidx.compose.ui:ui-tooling:1.0.5'
+    implementation 'androidx.compose.ui:ui-util:1.0.5'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
     implementation 'com.google.android.material:compose-theme-adapter:1.1.3'
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation 'androidx.compose.material:material-icons-extended:1.1.0'
 
-    implementation "com.google.accompanist:accompanist-insets:0.22.1-rc"
+    implementation "com.google.accompanist:accompanist-insets:0.24.9-beta"
+    implementation "com.google.accompanist:accompanist-pager:0.24.9-beta"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
 
