--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId "ru.luckycactus.steamroulette"
         minSdkVersion 21
@@ -53,7 +53,7 @@ android {
         jvmTarget = "1.8"
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.0'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     signingConfigs {
         release {
@@ -91,6 +91,7 @@ android {
             java.srcDirs += "src/sharedTest/java"
         }
     }
+    namespace 'ru.luckycactus.steamroulette'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -101,20 +102,25 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.compose.material:material:1.1.1'
-    implementation 'androidx.compose.animation:animation:1.1.1'
-    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
-    implementation 'androidx.compose.ui:ui-util:1.1.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
-    implementation 'com.google.android.material:compose-theme-adapter:1.1.11'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation 'androidx.compose.material:material'
+    implementation 'androidx.compose.animation:animation'
+    implementation 'androidx.compose.ui:ui-tooling'
+    implementation 'androidx.compose.ui:ui-util'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    implementation 'androidx.compose.material:material-icons-extended'
+
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
+    implementation 'com.google.android.material:compose-theme-adapter:1.1.21'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.compose.material:material-icons-extended:1.1.1'
 
     implementation "com.google.accompanist:accompanist-pager:0.24.9-beta"
 
@@ -127,10 +133,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.work:work-runtime-ktx:2.7.1"
 
-    implementation "androidx.room:room-runtime:2.4.1"
-    kapt "androidx.room:room-compiler:2.4.1"
-    implementation "androidx.room:room-ktx:2.4.1"
-    implementation "androidx.room:room-paging:2.4.1"
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-paging:2.4.3"
 
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
     testImplementation "androidx.paging:paging-common-ktx:3.1.0"
@@ -164,14 +170,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
-    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
 
     implementation("io.coil-kt:coil:2.0.0-rc1")
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
     implementation "androidx.browser:browser:1.4.0"
 
-    implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.7'
     implementation 'com.google.firebase:firebase-analytics-ktx:20.0.2'
@@ -181,7 +186,7 @@ dependencies {
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
-    implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
+    implementation 'com.github.terrakok:cicerone:7.1'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
