--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
         jvmTarget = "1.8"
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.4'
     }
     signingConfigs {
         release {
@@ -117,7 +117,7 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended'
 
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0'
 
     implementation 'com.google.android.material:compose-theme-adapter:1.1.21'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
@@ -138,14 +138,15 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.3"
     implementation "androidx.room:room-paging:2.4.3"
 
-    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
-    testImplementation "androidx.paging:paging-common-ktx:3.1.0"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+    testImplementation "androidx.paging:paging-common-ktx:3.1.1"
+    implementation("androidx.paging:paging-compose:1.0.0-alpha18")
 
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
 
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation 'androidx.activity:activity-ktx:1.4.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
@@ -161,9 +162,9 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    implementation "com.squareup.moshi:moshi:1.13.0"
-    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
-    kaptTest "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
+    implementation "com.squareup.moshi:moshi:1.14.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
+    kaptTest "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     //implementation 'com.squareup.moshi:moshi-adapters:1.13.0'
 
@@ -181,8 +182,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.7'
     implementation 'com.google.firebase:firebase-analytics-ktx:20.0.2'
 
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
